--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "heroku-pre-build": "npm install -g serve",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +40,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "msw": "^0.35.0"
+
+  },
+  "engines": {
+    "node": "16.19.1",
+    "npm": "8.19.3"
   }
 }
